--- a/public/css/features/response-viewer.css
+++ b/public/css/features/response-viewer.css
@@ -86,19 +86,26 @@
 }
 
 .json-tree-line {
+  display: flex;
+  align-items: center;
   min-height: 1.45em;
+  height: 1.45em;
+  line-height: 1.45;
   padding-left: calc(var(--json-depth, 0) * 2ch);
+  white-space: pre;
 }
 
 .json-tree-toggle,
 .json-tree-toggle-spacer {
+  box-sizing: border-box;
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  flex: 0 0 1.35em;
   width: 1.35em;
   height: 1.35em;
   margin: 0 0.35em 0 0;
-  vertical-align: text-bottom;
+  vertical-align: middle;
   font: inherit;
 }
 
